trying to fix book list container widths and spacing

--- a/client/src/components/BookList.css
+++ b/client/src/components/BookList.css
@@ -9,7 +9,6 @@
 
 .list {
   display: grid;
-  margin: 10px;
   grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: 1fr;
   gap: 1em;
